--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mars</title>
+    <title>M2_Ent</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
@@ -21,64 +21,64 @@
 
 <body>
     <!-- menu -->
-    <!-- <div class="menu">
-        <ul>
-            <li>
-                <a href="#x">소개</a>
-                <ul>
-                    <li><a href="#x">Mars:Project</a></li>
-                    <li><a href="#x">주요연혁</a></li>
-                    <li><a href="#x">수상내역</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#x">서비스</a>
-                <ul>
-                    <li><a href="#x">SERVICES</a></li>
-                    <li><a href="#x">FOR BUSINESS</a></li>
-                    <li><a href="#x">FOR CREATORS</a></li>
-                    <li><a href="#x">FOR DEVELOPERS</a></li>
-                    <li><a href="#x">ALL SERVICE</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#x">가치</a>
-                <ul>
-                    <li><a href="#x">리서치</a></li>
-                    <li><a href="#x">기업윤리</a></li>
-                    <li><a href="#x">기업윤리규범</a></li>
-                    <li><a href="#x">기업윤리 상담센터</a></li>
-                    <li><a href="#x">프라이버시 센터</a></li>
-                    <li><a href="#x">라이브러리</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#x">홍보</a>
-                <ul>
-                    <li><a href="#x">보도자료</a></li>
-                    <li><a href="#x">TV광고</a></li>
-                    <li><a href="#x">미디어행사</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#x">투자</a>
-                <ul>
-                    <li><a href="#x">기업지배구조</a></li>
-                    <li><a href="#x">주주구성</a></li>
-                    <li><a href="#x">이사회</a></li>
-                    <li><a href="#x">정관</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#x">채용</a>
-                <ul>
-                    <li><a href="#x">채용정보</a></li>
-                </ul>
-            </li>
-        </ul>
+<div class="menu">
+    <ul>
+        <li>
+            <a href="#x">소개</a>
+            <ul>
+                <li><a href="#x">Mars:Project</a></li>
+                <li><a href="#x">주요연혁</a></li>
+                <li><a href="#x">수상내역</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#x">서비스</a>
+            <ul>
+                <li><a href="#x">SERVICES</a></li>
+                <li><a href="#x">FOR BUSINESS</a></li>
+                <li><a href="#x">FOR CREATORS</a></li>
+                <li><a href="#x">FOR DEVELOPERS</a></li>
+                <li><a href="#x">ALL SERVICE</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#x">가치</a>
+            <ul>
+                <li><a href="#x">리서치</a></li>
+                <li><a href="#x">기업윤리</a></li>
+                <li><a href="#x">기업윤리규범</a></li>
+                <li><a href="#x">기업윤리 상담센터</a></li>
+                <li><a href="#x">프라이버시 센터</a></li>
+                <li><a href="#x">라이브러리</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#x">홍보</a>
+            <ul>
+                <li><a href="#x">보도자료</a></li>
+                <li><a href="#x">TV광고</a></li>
+                <li><a href="#x">미디어행사</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#x">투자</a>
+            <ul>
+                <li><a href="#x">기업지배구조</a></li>
+                <li><a href="#x">주주구성</a></li>
+                <li><a href="#x">이사회</a></li>
+                <li><a href="#x">정관</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#x">채용</a>
+            <ul>
+                <li><a href="#x">채용정보</a></li>
+            </ul>
+        </li>
+    </ul>
 
-        <div class="close"><i class="xi-close-thin"></i></div>
-    </div> -->
+    <div class="close"><i class="xi-close-thin"></i></div>
+</div>
 
     <div class="container">
         <!-- header -->
@@ -87,7 +87,6 @@
             <ul class="nav">
                 <li><a href="./pages/member.html">운영진</a></li>
                 <li><a href="./pages/gallery.html">화성환경</a></li>
-                <li><a href="./pages/paper.html">신청하기</a></li>
             </ul>
             <div class="hamburger"><i class="xi-bars"></i></div>
         </div>
