--- a/pages/member.html
+++ b/pages/member.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>운영진:mars</title>
+    <title>운영진:M2_Ent</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/member.css" />
@@ -18,7 +18,7 @@
 
 <body>
     <!-- menu -->
-    <!-- <div class="menu">
+    <div class="menu">
         <ul>
             <li>
                 <a href="#x">소개</a>
@@ -75,7 +75,7 @@
         </ul>
 
         <div class="close"><i class="xi-close-thin"></i></div>
-    </div> -->
+    </div>
 
     <div class="container">
         <!-- header -->
@@ -88,7 +88,6 @@
             <ul class="nav">
                 <li><a href="#x">운영진</a></li>
                 <li><a href="./gallery.html">화성환경</a></li>
-                <li><a href="./paper.html">신청하기</a></li>
             </ul>
             <div class="hamburger"><i class="xi-bars"></i></div>
         </div>
