--- a/index.html
+++ b/index.html
@@ -100,17 +100,11 @@
             </div>
 
             <div class="slide_text">
-                <h4>지구인을 위한 화성이주 프로젝트를 시작합니다</h4>
-                <h2>MARS</h2>
+                <h4>BJ와 관리자와 시청자가 함께 성장하는 엔터테인먼트</h4>
+                <h2>M2 Entertainment</h2>
                 <p>
-                    뛰노는 위하여 인류의 인간에 보라. 열락의 싸인 청춘의 있는가? 내려온
-                    있으며, 이상의 많이 들어 트고, 있는 보라. 같이 남는 찾아다녀도, 두기
-                    인도하겠다는 이상이 별과 끓는다.
+                    M2_Ent를 믿고  시간을 맡기는 사람에게, <br> 또 우리는 우리 스스로에게 자랑스럽기 위해서 <br>오늘도 최선을 다합니다.
                 </p>
-                <div class="btns">
-                    <a href="#x" class="btn red">내용보기</a>
-                    <a href="#x" class="btn green">신청하기</a>
-                </div>
             </div>
 
             <div class="arrows">
@@ -122,8 +116,8 @@
         <!-- pick -->
         <div class="section">
             <div class="title_box">
-                <h3>금주의 Pick</h3>
-                <p>구하지 들어 되려니와, 피가 피고, 품었기 이는 부패뿐이다.</p>
+                <h3>M2 Entertainment</h3>
+                <p>Euphoria Family / All of us Happiness~!!!</p>
             </div>
             <div class="slide_02">
                 <div class="item">
@@ -194,29 +188,17 @@
             </ul>
         </div>
 
-        
-         
-
-        <!-- map -->
-        <div class="section">
-            <div class="title_box">
-                <h3>오시는 길</h3>
-                <p>우주로 가는 길은 당신과 아주 가까운 곳에 있습니다.</p>
-            </div>
-        </div>
-        <div id="daumRoughmapContainer1674697189421" class="root_daum_roughmap root_daum_roughmap_landing map"></div>     
-
         <!-- footer -->
         <div class="footer">
             <div class="section">
                 <div class="bottom_header">
                     <div class="bottom_logo">
-                        <img src="./images/footer_logo.png" alt="" />
+                        <img src="../images/footer_logo.png" alt="">
                     </div>
                     <ul class="bottom_nav">
                         <li><a href="#x">서비스이용약관</a></li>
                         <li><a href="#x">개인정보 이용방침</a></li>
-                        <li><a href="#x">우주공간 이용규칙</a></li>
+                        <li><a href="#x">M2 Entertainment</a></li>
                     </ul>
                     <div class="sns">
                         <i class="xi-instagram"></i>
@@ -226,32 +208,21 @@
                     </div>
                 </div>
                 <p class="site_info">
-                    마스프로젝트(주) 대표 : 일론 머스크<br />
-                    사업자등록번호 : XRE-58-HU-78425-000<br />
-                    통신판매업신고 : 2020-화성-제2154호<br />
-                    이메일 : spacetour@google.com<br />
-                    주소 : 서울시 영등포구 분화구옆 큰길 574 ( 화성동 E8 - A172F00 )<br />
+                    M2 Entertainment 대표 : 정 우 용<br />
+                    All of us Happiness~!!!<br />
+                    FAX : 0504-340-8285<br />
+                    이메일 : king28120@naver.com<br />
+                    주소 : 서울특별시 영등포구 영등포로 36길 9 (송호 빌딩 5층)
+                    <br />
                     고객센터 AM 10:00 ~ PM 05:00 / 주말, 공휴일 제외
                 </p>
-                <p class="copyright">© 2123 Mars:Project Inc. All Rights Reserved</p>
+                <p class="copyright">© M2 Entertainment. All Rights Reserved</p>
             </div>
         </div>
 
         <!-- goTop -->
         <div class="gotop"><i class="xi-arrow-up"></i></div>
     </div>
-
-    <script charset="UTF-8" class="daum_roughmap_loader_script"
-        src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-
-    <script charset="UTF-8">
-        new daum.roughmap.Lander({
-            timestamp: "1674697189421",
-            key: "2diky",
-            mapWidth: "640",
-            mapHeight: "450",
-        }).render()
-    </script>
 </body>
 
 </html>
