--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -166,12 +166,12 @@
             <div class="section">
                 <div class="bottom_header">
                     <div class="bottom_logo">
-                        <img src="../images/footer_logo.png" alt="" />
+                        <img src="../images/footer_logo.png" alt="">
                     </div>
                     <ul class="bottom_nav">
                         <li><a href="#x">서비스이용약관</a></li>
                         <li><a href="#x">개인정보 이용방침</a></li>
-                        <li><a href="#x">우주공간 이용규칙</a></li>
+                        <li><a href="#x">M2 Entertainment</a></li>
                     </ul>
                     <div class="sns">
                         <i class="xi-instagram"></i>
@@ -181,15 +181,15 @@
                     </div>
                 </div>
                 <p class="site_info">
-                    마스프로젝트(주) 대표 : 일론 머스크<br />
-                    사업자등록번호 : XRE-58-HU-78425-000<br />
-                    통신판매업신고 : 2020-화성-제2154호<br />
-                    이메일 : spacetour@google.com<br />
-                    주소 : 서울특별시 영등포구 분화구옆 큰길 574 ( 화성동 E8 - A172F00
-                    )<br />
+                    M2 Entertainment 대표 : 정 우 용<br />
+                    All of us Happiness~!!!<br />
+                    FAX : 0504-340-8285<br />
+                    이메일 : king28120@naver.com<br />
+                    주소 : 서울특별시 영등포구 영등포로 36길 9 (송호 빌딩 5층)
+                    <br />
                     고객센터 AM 10:00 ~ PM 05:00 / 주말, 공휴일 제외
                 </p>
-                <p class="copyright">© 2123 Mars:Project Inc. All Rights Reserved</p>
+                <p class="copyright">© M2 Entertainment. All Rights Reserved</p>
             </div>
         </div>
     </div>
